--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div><!--FIN CLASE DISPLAY-->
             <button class="col-2" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
-            <button class="numero" value="dividir">/</button>
+            <button class="operador" value="dividir">/</button>
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
